# Axon_V2.6Exp

./: .gitignore  README.md  agents.md  pyproject.toml
config/: default_config.toml
config/feature_masks/: ga_recall_guard_2000.json
docs/: feature_subset_ga_report.md
scripts/: evaluate_feature_mask.py  extract_speakeasy_sequences_dataset.py  main.py  patch_speakeasy_global_timeout.py  search_feature_subset_ga.py  smoke_test.py  smoke_test_final.py  smoke_test_global_timeout.py  smoke_test_simple.py
src/: axon_exp.py  config.py  dataset.py  feature_mask.py  model.py  trainer.py
src/dsra/: __init__.py  dsra_model.py
src/dsra/mhdsra2/: improved_dsra_mha.py
src/kvd_features/: __init__.py  extractor.py
tests/: test_feature_mask.py  test_feature_subset_ga.py
