[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-v26-exp"
version = "0.1.0"
description = "Axon v2.6 - Hybrid Malware Detection with DSRA and KVD Features"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Axon Team"}
]
keywords = ["malware-detection", "deep-learning", "dsra", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "pefile>=2023.2.7",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
tracking = [
    "swanlab>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/axon-team/axon-v26-exp"
Repository = "https://github.com/axon-team/axon-v26-exp"
Documentation = "https://axon-v26-exp.readthedocs.io"

[project.scripts]
axon-train = "scripts.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
